update index col screen inset

--- a/index.qmd
+++ b/index.qmd
@@ -25,8 +25,9 @@ advdate <- function(day, week) {
 
 This page displays an outline of the topics, content, and assignments for the term. Each module starts on a Monday. There are no assignments due on Sundays.
 
+::: column-screen-inset-right
 | Module | Date                 | Topics                                | Skills                                                    | Readings | Videos | Slides | Assignments |
-|---------|---------|---------|---------------|---------|---------|---------|---------|
+|--------|----------------------|---------------------------------------|-----------------------------------------------------------|----------|--------|--------|-------------|
 | 1.1    | `r advdate(mon,0)`   | The `readr` package                   | Read .csv and excel files into R                          |          |        |        |             |
 |        | `r advdate(tues,0)`  | Downloading data from APIs            | Download data from `vdemdata` and store as an object      |          |        |        |             |
 |        | `r advdate(wed,0)`   | Exploring APIs                        | Download data from World Bank with `wbstats`              |          |        |        |             |
@@ -63,3 +64,4 @@ This page displays an outline of the topics, content, and assignments for the te
 | 6.2    | `r advdate(thur, 5)` |                                       |                                                           |          |        |        |             |
 |        | `r advdate(fri, 5)`  |                                       |                                                           |          |        |        |             |
 |        | `r advdate(sat, 5)`  |                                       |                                                           |          |        |        |             |
+:::
