update course schedule

--- a/index.qmd
+++ b/index.qmd
@@ -26,42 +26,42 @@ advdate <- function(day, week) {
 This page displays an outline of the topics, content, and assignments for the term. Each module starts on a Monday. There are no assignments due on Sundays.
 
 ::: column-screen-inset-right
-| Module | Date                 | Topics                                | Skills                                                        | Readings                          | Videos | Slides | Assignments |
+| Module | Date                 | Topics                                | Skills                                                             | Readings                          | Videos | Slides | Assignments |
 |---------|---------|---------|---------|---------|---------|---------|---------|
-| 1.1    | `r advdate(mon,0)`   | The `readr` package                   | Read .csv and excel files into R                              |                                   |        |        |             |
-|        | `r advdate(tues,0)`  | Downloading data from APIs            | Download data from `vdemdata` and store as an object          |                                   |        |        |             |
-|        | `r advdate(wed,0)`   | Exploring APIs                        |                                                               |                                   |        |        |             |
-| 1.2    | `r advdate(thur,0)`  | The `dplyr` package I                 | Filter observations, select variables and create new ones     |                                   |        |        |             |
-|        | `r advdate(fri,0)`   | The `dplyr` package II                | Arrange, group and summarize data                             |                                   |        |        |             |
-|        | `r advdate(sat,0)`   | Data tidying and cleaning             | Pivot data with `tidyr`; clean data with `janitor`            |                                   |        |        |             |
-| 2.1    | `r advdate(mon,1)`   | The grammar of graphics and `ggplot2` | Basics of `ggplot2` syntax                                    |                                   |        |        |             |
-|        | `r advdate(tues, 1)` | Bar charts and line charts            | Create bar charts, line charts and shaded area charts         |                                   |        |        |             |
-|        | `r advdate(wed, 1)`  | Scatter plots and linear models       | Group points using shapes or colors; add fitted lines to data |                                   |        |        |             |
-| 2.2    | `r advdate(thur, 1)` | Themes and annotations                | Add text, labels, annotations and lines to your graphs        |                                   |        |        |             |
-|        | `r advdate(fri, 1)`  | Interactivity                         | Make visualizations interactive with `plotly`                 |                                   |        |        |             |
-|        | `r advdate(sat, 1)`  | Clarity and accessibility             | Make sure everyone can read your graphs                       |                                   |        |        |             |
-| 3.1    | `r advdate(mon, 2)`  | World Bank databases                  | Download World Bank with `wbstats`                            |                                   |        |        |             |
-|        | `r advdate(tues, 2)` | Create a world map                    | Basics of `sf` and `rnaturalearth packages`                   |                                   |        |        |             |
-|        | `r advdate(wed, 2)`  | Mapping data                          | Join WB data to polygons and map                              | Something related to ethics here? |        |        |             |
-| 3.2    | `r advdate(thur, 2)` | Regional maps                         | `leaflet`                                                     |                                   |        |        |             |
-|        | `r advdate(fri, 2)`  |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(sat, 2)`  |                                       |                                                               |                                   |        |        |             |
-| 4.1    | `r advdate(mon, 3)`  |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(tues, 3)` |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(wed, 3)`  |                                       |                                                               |                                   |        |        |             |
-| 4.2    | `r advdate(thur, 3)` |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(fri, 3)`  |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(sat, 3)`  |                                       |                                                               |                                   |        |        |             |
-| 5.1    | `r advdate(mon, 4)`  |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(tues, 4)` |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(wed, 4)`  |                                       |                                                               |                                   |        |        |             |
-| 5.2    | `r advdate(thur, 4)` |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(fri, 4)`  |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(sat, 4)`  |                                       |                                                               |                                   |        |        |             |
-| 6.1    | `r advdate(mon, 5)`  |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(tues, 5)` |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(wed, 5)`  |                                       |                                                               |                                   |        |        |             |
-| 6.2    | `r advdate(thur, 5)` |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(fri, 5)`  |                                       |                                                               |                                   |        |        |             |
-|        | `r advdate(sat, 5)`  |                                       |                                                               |                                   |        |        |             |
+| 1.1    | `r advdate(mon,0)`   | The `readr` package                   | Read .csv and excel files into R                                   |                                   |        |        |             |
+|        | `r advdate(tues,0)`  | Downloading data from APIs            | Download data from `vdemdata` and store as an object               |                                   |        |        |             |
+|        | `r advdate(wed,0)`   | Exploring APIs                        |                                                                    |                                   |        |        |             |
+| 1.2    | `r advdate(thur,0)`  | The `dplyr` package I                 | Filter observations, select variables and create new ones          |                                   |        |        |             |
+|        | `r advdate(fri,0)`   | The `dplyr` package II                | Arrange, group and summarize data                                  |                                   |        |        |             |
+|        | `r advdate(sat,0)`   | Data tidying and cleaning             | Pivot data with `tidyr`; clean data with `janitor`                 |                                   |        |        |             |
+| 2.1    | `r advdate(mon,1)`   | The grammar of graphics and `ggplot2` | Basics of `ggplot2` syntax                                         |                                   |        |        |             |
+|        | `r advdate(tues, 1)` | Bar charts and line charts            | Create bar charts, line charts and shaded area charts              |                                   |        |        |             |
+|        | `r advdate(wed, 1)`  | Scatter plots and linear models       | Group points using shapes or colors; add fitted lines to data      |                                   |        |        |             |
+| 2.2    | `r advdate(thur, 1)` | Themes and annotations                | Add text, labels, annotations and lines to your graphs             |                                   |        |        |             |
+|        | `r advdate(fri, 1)`  | Interactivity                         | Make visualizations interactive with `plotly`                      |                                   |        |        |             |
+|        | `r advdate(sat, 1)`  | Clarity and accessibility             | Make sure everyone can read your graphs                            |                                   |        |        |             |
+| 3.1    | `r advdate(mon, 2)`  | World Bank databases                  | Download World Bank with `wbstats`                                 |                                   |        |        |             |
+|        | `r advdate(tues, 2)` | Create a world map                    | Basics of `sf` and `rnaturalearth packages`                        |                                   |        |        |             |
+|        | `r advdate(wed, 2)`  | Mapping data                          | Join WB data to polygons and map                                   | Something related to ethics here? |        |        |             |
+| 3.2    | `r advdate(thur, 2)` | The `leaflet` package                 | Make an OpenStreetMap with markers or popups                       |                                   |        |        |             |
+|        | `r advdate(fri, 2)`  | Map state-level data                  | Create choropleth with `colorBin()` and `addPolygons()` functions  |                                   |        |        |             |
+|        | `r advdate(sat, 2)`  | Map interactivity                     | Add interactive labels to state choropleth                         |                                   |        |        |             |
+| 4.1    | `r advdate(mon, 3)`  | The `wid-r-tool` package              |                                                                    |                                   |        |        |             |
+|        | `r advdate(tues, 3)` | Reshaping data                        | `pivot_longer` and `pivot_wider`                                   |                                   |        |        |             |
+|        | `r advdate(wed, 3)`  | Download and reshape WID data         |                                                                    |                                   |        |        |             |
+| 4.2    | `r advdate(thur, 3)` | The grammar of tables                 |                                                                    |                                   |        |        |             |
+|        | `r advdate(fri, 3)`  | Make a table of income shares         | Format data with `fmt_percent()`                                   |                                   |        |        |             |
+|        | `r advdate(sat, 3)`  | Modify parts of table                 |                                                                    |                                   |        |        |             |
+| 5.1    | `r advdate(mon, 4)`  | What is a Shiny app?                  |                                                                    |                                   |        |        |             |
+|        | `r advdate(tues, 4)` | The `ui` and `server` objects         |                                                                    |                                   |        |        |             |
+|        | `r advdate(wed, 4)`  | Your first Shiny app                  |                                                                    |                                   |        |        |             |
+| 5.2    | `r advdate(thur, 4)` | The `fredr` package                   |                                                                    |                                   |        |        |             |
+|        | `r advdate(fri, 4)`  | Indicator graphing app, Part I        |                                                                    |                                   |        |        |             |
+|        | `r advdate(sat, 4)`  | Indicator graphing app, Part II       |                                                                    |                                   |        |        |             |
+| 6.1    | `r advdate(mon, 5)`  |                                       |                                                                    |                                   |        |        |             |
+|        | `r advdate(tues, 5)` |                                       |                                                                    |                                   |        |        |             |
+|        | `r advdate(wed, 5)`  |                                       |                                                                    |                                   |        |        |             |
+| 6.2    | `r advdate(thur, 5)` |                                       |                                                                    |                                   |        |        |             |
+|        | `r advdate(fri, 5)`  |                                       |                                                                    |                                   |        |        |             |
+|        | `r advdate(sat, 5)`  |                                       |                                                                    |                                   |        |        |             |
 :::
